# isotope-explorer

./: .gitignore  CLAUDE.md  Cargo.toml  package-lock.json  package.json
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.vue  vite-env.d.ts
apps/web/src/components/: CardChainView.vue  ChainView.vue  PeriodicTablePicker.vue  QuickPickList.vue
apps/web/src/data/: periodic-table-layout.ts
crates/nuclear-sim/: Cargo.toml
crates/nuclear-sim-wasm/: Cargo.toml
crates/nuclear-sim-wasm/src/: lib.rs
crates/nuclear-sim/data/: nuclide_data.json
crates/nuclear-sim/src/: data.rs  elements.rs  lib.rs  nucleus.rs  nuclide.rs  sim.rs
docs/: design.md  plan.md  setup.bash
scripts/: extract_decays.py  extract_mendeleev.py  extract_neutron_data.py  merge_dataset.py  requirements.txt
scripts/pathb/: build_fission_yields.py  build_thermal_xs.py  fetch_iaea_decays.py  merge_pathb.py
scripts/pathb/data/: fission_yields.json  iaea_ground_states.json  thermal_xs.json
