[package]
name = "nuclear-sim-wasm"
version = "0.3.0"
edition = "2021"
description = "WASM bindings for nuclear-sim"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nuclear-sim = { path = "../nuclear-sim" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
serde_json = "1"
